@@ -1,3 +1,7 @@
+JLife v.1.10.2
+Zlife spend more energy if faster!
+Zredator eating now not necessary killing zlife!!
+
 JLife v.0.1.10.1
 JLifeStatistic add Subtotal
 JLifeStatistic fix bug
